accomdated change to query semester data correctly according to semester slug, and also modifed the overflow styles of serach dropdown

--- a/client/src/pages/app/styles/app.module.css
+++ b/client/src/pages/app/styles/app.module.css
@@ -99,6 +99,7 @@
 
 .serachContainer .dropdown {
   display: block;
+  overflow-y: auto;
 }
 
 .navIconContainer .dropdown {
